fix(style): improve contrast on highlighted "attention" text

--- a/css/per-page/apply.css
+++ b/css/per-page/apply.css
@@ -52,6 +52,7 @@ form > p:has(input[required]) > label::after,
 form > fieldset:has(input[required]) > legend::after {
 	content: '*';
 	color: var(--col-attention);
+	font-weight: bold;
 }
 
 form > p:last-child {
