--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ NOTE: For page-specific styling, individual CSS files should be used per-page.
 	--col-background-card-translucent: #605a9cf0;
 	--col-background-nav: #fafafb;
 	--col-element-shadow: rgba(0, 0, 0, 0.25);
-	--col-attention: rgb(194, 85, 85);
+	--col-attention: rgb(189, 67, 67);
 }
 
 /***********************************************/
